librocksdb_sys/src/lib.rs


    pub fn rocksdb_get(db: *const DBInstance,
                       readopts: *const DBReadOptions,
                       k: *const u8,
                       kLen: size_t,
                       valLen: *const size_t,
                       err: *mut *mut c_char)
                       -> *mut u8;
    pub fn rocksdb_get_cf(db: *const DBInstance,
                          readopts: *const DBReadOptions,
                          cf_handle: *mut DBCFHandle,
                          k: *const u8,
                          kLen: size_t,
                          valLen: *const size_t,
                          err: *mut *mut c_char)
                          -> *mut u8;
    pub fn rocksdb_create_iterator(db: *mut DBInstance,
                                   readopts: *const DBReadOptions)
                                   -> *mut DBIterator;
    pub fn rocksdb_create_iterator_cf(db: *mut DBInstance,
                                      readopts: *const DBReadOptions,
                                      cf_handle: *mut DBCFHandle)
                                      -> *mut DBIterator;
    pub fn rocksdb_create_snapshot(db: *mut DBInstance) -> *const DBSnapshot;
    pub fn rocksdb_release_snapshot(db: *mut DBInstance, snapshot: *const DBSnapshot);

    pub fn rocksdb_delete(db: *mut DBInstance,
                          writeopts: *const DBWriteOptions,
                          k: *const u8,
                          kLen: size_t,
                          err: *mut *mut c_char);
    pub fn rocksdb_delete_cf(db: *mut DBInstance,
                             writeopts: *const DBWriteOptions,
                             cf: *mut DBCFHandle,
                             k: *const u8,
                             kLen: size_t,
                             err: *mut *mut c_char);
    pub fn rocksdb_close(db: *mut DBInstance);
    pub fn rocksdb_destroy_db(options: *const DBOptions,
                              path: *const c_char,
                              err: *mut *mut c_char);
    pub fn rocksdb_repair_db(options: *const DBOptions,
                             path: *const c_char,
                             err: *mut *mut c_char);
    // Merge
    pub fn rocksdb_merge(db: *mut DBInstance,
                         writeopts: *const DBWriteOptions,
                         k: *const u8,
                         kLen: size_t,
                         v: *const u8,
                         vLen: size_t,
                         err: *mut *mut c_char);
    pub fn rocksdb_merge_cf(db: *mut DBInstance,
                            writeopts: *const DBWriteOptions,
                            cf: *mut DBCFHandle,
                            k: *const u8,
                            kLen: size_t,
                            v: *const u8,
                            vLen: size_t,
                            err: *mut *mut c_char);
    pub fn rocksdb_mergeoperator_create(
        state: *mut c_void,
        destroy: extern fn(*mut c_void) -> (),
        full_merge: extern fn (arg: *mut c_void,
                               key: *const c_char, key_len: size_t,
                               existing_value: *const c_char,
                               existing_value_len: size_t,
                               operands_list: *const *const c_char,
                               operands_list_len: *const size_t,
                               num_operands: c_int, success: *mut u8,
                               new_value_length: *mut size_t
                               ) -> *const c_char,
        partial_merge: extern fn(arg: *mut c_void,
                                 key: *const c_char, key_len: size_t,
                                 operands_list: *const *const c_char,
                                 operands_list_len: *const size_t,
                                 num_operands: c_int, success: *mut u8,
                                 new_value_length: *mut size_t
                                 ) -> *const c_char,
        delete_value: Option<extern "C" fn(*mut c_void,
                                           value: *const c_char,
                                           value_len: *mut size_t
                                           ) -> ()>,
        name_fn: extern fn(*mut c_void) -> *const c_char,
    ) -> *mut DBMergeOperator;
    pub fn rocksdb_mergeoperator_destroy(mo: *mut DBMergeOperator);
    pub fn rocksdb_options_set_merge_operator(options: *mut DBOptions, mo: *mut DBMergeOperator);
    // Iterator
    pub fn rocksdb_iter_destroy(iter: *mut DBIterator);
    pub fn rocksdb_iter_valid(iter: *const DBIterator) -> bool;
    pub fn rocksdb_iter_seek_to_first(iter: *mut DBIterator);
    pub fn rocksdb_iter_seek_to_last(iter: *mut DBIterator);
    pub fn rocksdb_iter_seek(iter: *mut DBIterator, key: *const u8, klen: size_t);
    pub fn rocksdb_iter_next(iter: *mut DBIterator);
    pub fn rocksdb_iter_prev(iter: *mut DBIterator);
    pub fn rocksdb_iter_key(iter: *const DBIterator, klen: *mut size_t) -> *mut u8;
    pub fn rocksdb_iter_value(iter: *const DBIterator, vlen: *mut size_t) -> *mut u8;
    pub fn rocksdb_iter_get_error(iter: *const DBIterator, err: *mut *mut c_char);
    // Write batch
    pub fn rocksdb_write(db: *mut DBInstance,
                         writeopts: *const DBWriteOptions,
                         batch: *mut DBWriteBatch,
                         err: *mut *mut c_char);
    pub fn rocksdb_writebatch_create() -> *mut DBWriteBatch;
    pub fn rocksdb_writebatch_create_from(rep: *const u8, size: size_t) -> *mut DBWriteBatch;
    pub fn rocksdb_writebatch_destroy(batch: *mut DBWriteBatch);
    pub fn rocksdb_writebatch_clear(batch: *mut DBWriteBatch);
    pub fn rocksdb_writebatch_count(batch: *mut DBWriteBatch) -> c_int;
    pub fn rocksdb_writebatch_put(batch: *mut DBWriteBatch,
                                  key: *const u8,
                                  klen: size_t,
                                  val: *const u8,
                                  vlen: size_t);
    pub fn rocksdb_writebatch_put_cf(batch: *mut DBWriteBatch,
                                     cf: *mut DBCFHandle,
                                     key: *const u8,
                                     klen: size_t,
                                     val: *const u8,
                                     vlen: size_t);
    pub fn rocksdb_writebatch_merge(batch: *mut DBWriteBatch,
                                    key: *const u8,
                                    klen: size_t,
                                    val: *const u8,
                                    vlen: size_t);
    pub fn rocksdb_writebatch_merge_cf(batch: *mut DBWriteBatch,
                                       cf: *mut DBCFHandle,
                                       key: *const u8,
                                       klen: size_t,
                                       val: *const u8,
                                       vlen: size_t);
    pub fn rocksdb_writebatch_delete(batch: *mut DBWriteBatch, key: *const u8, klen: size_t);
    pub fn rocksdb_writebatch_delete_cf(batch: *mut DBWriteBatch,
                                        cf: *mut DBCFHandle,
                                        key: *const u8,
                                        klen: size_t);
    pub fn rocksdb_writebatch_iterate(batch: *mut DBWriteBatch,
                                      state: *mut c_void,
                                      put_fn: extern "C" fn(state: *mut c_void,
                                                            k: *const u8,
                                                            klen: size_t,
                                                            v: *const u8,
                                                            vlen: size_t),
                                      deleted_fn: extern "C" fn(state: *mut c_void,
                                                                k: *const u8,
                                                                klen: size_t));
    pub fn rocksdb_writebatch_data(batch: *mut DBWriteBatch, size: *mut size_t) -> *const u8;

    // Comparator
    pub fn rocksdb_options_set_comparator(options: *mut DBOptions, cb: *mut DBComparator);
    pub fn rocksdb_comparator_create(state: *mut c_void,
                                     destroy: extern "C" fn(*mut c_void) -> (),
                                     compare: extern "C" fn(arg: *mut c_void,
                                                            a: *const c_char,
                                                            alen: size_t,
                                                            b: *const c_char,
                                                            blen: size_t)
                                                            -> c_int,
                                     name_fn: extern "C" fn(*mut c_void) -> *const c_char)
                                     -> *mut DBComparator;
    pub fn rocksdb_comparator_destroy(cmp: *mut DBComparator);

    // Column Family
    pub fn rocksdb_open_column_families(options: *const DBOptions,
                                        path: *const c_char,
                                        num_column_families: c_int,
                                        column_family_names: *const *const c_char,
                                        column_family_options: *const *const DBOptions,
                                        column_family_handles: *const *mut DBCFHandle,
                                        err: *mut *mut c_char)
                                        -> *mut DBInstance;
    pub fn rocksdb_create_column_family(db: *mut DBInstance,
                                        column_family_options: *const DBOptions,
                                        column_family_name: *const c_char,
                                        err: *mut *mut c_char)
                                        -> *mut DBCFHandle;
    pub fn rocksdb_drop_column_family(db: *mut DBInstance,
                                      column_family_handle: *mut DBCFHandle,
                                      err: *mut *mut c_char);
    pub fn rocksdb_column_family_handle_destroy(column_family_handle: *mut DBCFHandle);
    pub fn rocksdb_list_column_families(db: *const DBOptions,
                                        path: *const c_char,
                                        lencf: *mut size_t,
                                        err: *mut *mut c_char)
                                        -> *mut *mut c_char;
    pub fn rocksdb_list_column_families_destroy(list: *mut *mut c_char, len: size_t);

    // Flush options
    pub fn rocksdb_flushoptions_create() -> *mut DBFlushOptions;
    pub fn rocksdb_flushoptions_destroy(opt: *mut DBFlushOptions);
    pub fn rocksdb_flushoptions_set_wait(opt: *mut DBFlushOptions, whether_wait: bool);

    pub fn rocksdb_flush(db: *mut DBInstance,
                         options: *const DBFlushOptions,
                         err: *mut *mut c_char);
